data/derived/fa15/progs/unify/prog1060.ml.out
Characters 29-45:
  let fixpoint (f,b) = wwhile ((f b, (f b) = b),b);;
                               ^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
